    - Disable the fixed severity in favour of the tag.
    - MIME-encoded messages to bugs are displayed in decoded form on the web
      interface (unless the "mime=no" parameter is used), closes: #136114.
    - Add facility to search by tag.
    - Fix rebuild script and add it to the example crontab, closes: #139696.
    - Silence postinst warning if spool/db doesn't exist, closes: #194892.
  * Adam Heath:
    - Convert all code to use global read/write functions, instead of having
      it duplicated everywhere.
    - Trim trailing whitespace from pseudoheader values.  Closes: #153590.
    - Warn when reassigning to an unknown package.  Closes: #60595.
  * Josip Rodin:
    - Added a terse=yes mode for bugreport.cgi, possibly useful for
      monstrously long bugs.
    - Purged needless date(1) forks, replaced with strftime.

 -- Colin Watson <cjwatson@debian.org>  Mon, 25 Nov 2002 03:50:20 +0000

debbugs (2.4) experimental; urgency=low

  * Updating the package with what's in CVS, even though this might
    completely break things for people who've been using the previous also
    broken package. <shrug> :) Upped the minor version since the changes
    are noticeable, and uploaded to experimental, just in case.
  * Applied speedup patch, that uses references, instead of copies.
    Thanks to Thomas Smith. Closes: #87176. [Adam]
  * Reverted some parts of the speedup patch because it breaks the API.
    [Anthony]
  * Bugs that are tagged fixed are now listed in a separate section in the
    web pages. Patch from Colin Watson. Closes: #86922. [Adam]
  * Added support for an additional Maintainers.override file, which is read
    after the normal one. This allows the normal one to be externally
    updated, but still have local overrides. [Adam]
  * Put <title> and </title> on the same line as the title since some lame
    browsers don't seem to like it otherwise. [Josip]
  * Include a mailto: URI in the header for a bug report. [Adam]