@@ -1,5 +1,5 @@
 #!/usr/bin/perl
-# $Id: service.in,v 1.76 2003/05/31 11:17:16 cjwatson Exp $
+# $Id: service.in,v 1.77 2003/06/05 08:26:59 cjwatson Exp $
 # ^ more or less ^
 #
 # Usage: service <code>.nn
@@ -958,7 +958,7 @@ END
 sub sendlynxdocraw {
     local ($relpath,$description) = @_;
     $doc='';
-    open(L,"lynx -nolist -dump $gCGIDomain/\Q$relpath\E 2>&1 |") || &quit("fork for lynx: $!");
+    open(L,"lynx -nolist -dump http://$gCGIDomain/\Q$relpath\E 2>&1 |") || &quit("fork for lynx: $!");
     while(<L>) { $doc.=$_; }
     $!=0; close(L);
     if ($? == 255 && $doc =~ m/^\n*lynx: Can\'t access start file/) {
